# openpresso-proto

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  openpresso.proto  openpresso_protoConfig.cmake.in  pyproject.toml
.github/workflows/: ci.yml  release-publish.yml
openpresso_proto/: __init__.py
src/: CMakeLists.txt
src/openpresso_proto/: openpresso.proto
